--- a/presentation.tex
+++ b/presentation.tex
@@ -494,9 +494,9 @@
     \begin{itemize}
       \item Vanskelig å spoofe to mottakere
       \item God klokke -- lite spillerom for narring
-	%\begin{itemize}
-	%	\item 50 × $10^{-12}$ (0.05 ns/s) er trangt.
-	%\end{itemize}
+	     \begin{itemize}
+	       \item $50 x 10^{-12}$ er trangt nåløye.
+	     \end{itemize}
     \end{itemize}
     \item Effektivitet til Sensor Server arkitekturen. 
     \begin{itemize}
